--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue2-google-maps": "^0.10.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
