--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "firebase": "^6.0.4",
     "vue": "^2.6.10",
     "vue2-google-maps": "^0.10.6"
   },
